--- a/index.html
+++ b/index.html
@@ -21,6 +21,25 @@
         .custom-scroll::-webkit-scrollbar-thumb { background: #475569; border-radius: 9999px; }
         .modern-modal { animation: modalPop 0.4s cubic-bezier(0.34, 1.56, 0.64, 1); }
         @keyframes modalPop { from { opacity: 0; transform: scale(0.85) translateY(30px); } to { opacity: 1; transform: scale(1) translateY(0); } }
+        #threatToast {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            background: #ef4444;
+            color: white;
+            padding: 16px 24px;
+            border-radius: 8px;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.2);
+            opacity: 0;
+            transform: translateY(20px);
+            transition: all 0.3s ease;
+            z-index: 1000;
+            max-width: 300px;
+        }
+        #threatToast.show {
+            opacity: 1;
+            transform: translateY(0);
+        }
     </style>
 </head>
 <body class="h-screen flex flex-col text-slate-200 overflow-hidden">
@@ -176,6 +195,17 @@
                         class="flex-1 py-4 bg-red-600 hover:bg-red-500 rounded-2xl font-semibold transition-all active:scale-95">
                     BLOCK IP
                 </button>
+            </div>
+        </div>
+    </div>
+
+    <!-- THREAT ALERT TOAST -->
+    <div id="threatToast">
+        <div class="flex items-center gap-3">
+            <i class="fa-solid fa-exclamation-triangle text-xl"></i>
+            <div>
+                <div class="font-bold">New Threat Detected</div>
+                <div id="toastEmail" class="text-sm"></div>
             </div>
         </div>
     </div>
@@ -407,10 +437,11 @@
             }
         });
 
-        db.ref('unauthorized_attempts').on('child_added', () => {
+        db.ref('unauthorized_attempts').on('child_added', (snap) => {
             threatData.shift();
             threatData.push((threatData[threatData.length - 1] || 0) + 1);
             fluctuatingChart.update();
+            showThreatAlert(snap.val());
         });
 
         // Unauthorized attempts
@@ -423,6 +454,13 @@
             threats = threats.slice(0, 12);
             renderThreats();
         });
+
+        function showThreatAlert(threat) {
+            const toast = document.getElementById('threatToast');
+            document.getElementById('toastEmail').textContent = threat.attemptedEmail;
+            toast.classList.add('show');
+            setTimeout(() => toast.classList.remove('show'), 5000);
+        }
 
         window.onload = () => {
             initCharts();
