--- a/index.html
+++ b/index.html
@@ -148,25 +148,14 @@
             border-color: #22d3ee;
         }
 
-        /* LIGHT MODE */
-        .light-mode { background-color: #f8fafc !important; color: #0f172a !important; }
-        .light-mode .glass-header { background: rgba(248, 250, 252, 0.95) !important; }
-        .light-mode .glass-card { background: rgba(255,255,255,0.95) !important; border-color: rgba(148,163,184,0.3) !important; }
-        .light-mode .bg-slate-900 { background-color: #f1f5f9 !important; }
-        .light-mode .bg-slate-800 { background-color: #e2e8f0 !important; }
-        .light-mode .bg-slate-700 { background-color: #cbd5e1 !important; }
-        .light-mode .text-slate-200 { color: #0f172a !important; }
-        .light-mode .text-slate-400 { color: #475569 !important; }
-        .light-mode .border-slate-700 { border-color: #e2e8f0 !important; }
-        .light-mode .neon-text { text-shadow: 0 0 15px rgb(6 182 212); }
-        .light-mode .data-notification { background: linear-gradient(135deg, #f8fafc, #e2e8f0); border-color: #22d3ee; color: #0f172a; }
-        .light-mode #threatToast { background: #ef4444; color: white; }
-
         /* Severity Colors */
-        .severity-low { background: #10b981; color: white; }
-        .severity-medium { background: #eab308; color: #1e2937; }
-        .severity-high { background: #f97316; color: white; }
-        .severity-critical { background: #ef4444; color: white; }
+        .severity-low { background: #10b981; color: white; animation: pulse-green 2s infinite; }
+        .severity-medium { background: #eab308; color: #1e2937; animation: pulse-yellow 2s infinite; }
+        .severity-high { background: #f97316; color: white; animation: pulse-orange 2s infinite; }
+        .severity-critical { background: #ef4444; color: white; animation: pulse-red 2s infinite; }
+        @keyframes pulse-green { 0%,100% { opacity: 1; } 50% { opacity: 0.7; } }
+        @keyframes pulse-yellow { 0%,100% { opacity: 1; } 50% { opacity: 0.7; } }
+        @keyframes pulse-orange { 0%,100% { opacity: 1; } 50% { opacity: 0.7; } }
     </style>
 <base target="_blank">
 </head>
@@ -201,9 +190,6 @@
                 <button onclick="exportFullReport()" class="bg-slate-700 hover:bg-slate-600 px-5 py-2.5 rounded-3xl flex items-center gap-3 text-sm font-semibold btn-hover transition-all">
                     <i class="fa-solid fa-file-pdf"></i>
                     <span class="hidden sm:inline">EXPORT PDF</span>
-                </button>
-                <button onclick="toggleTheme()" id="themeToggle" class="flex items-center justify-center w-10 h-10 rounded-2xl hover:bg-slate-800 btn-hover text-xl">
-                    <i class="fa-solid fa-moon" id="themeIcon"></i>
                 </button>
                 <span id="lastRefreshed" class="text-xs font-mono text-slate-400 ml-2 hidden md:block">Just now</span>
             </div>
@@ -446,7 +432,6 @@
         let audioContext = null;
         let soundEnabled = true;
         let currentSoundProfile = 'alarm';
-        let isDarkMode = true;
         let activityLogs = [];
         let totalRegistered = 0;
         let currentActive = 0;
@@ -491,13 +476,6 @@
         function setSoundProfile(val) { currentSoundProfile = val; showNotification('Sound profile changed to ' + val.toUpperCase(), 'info'); }
 
         function setVolume(val) { volumeLevel = parseFloat(val)/100; }
-
-        function toggleTheme() {
-            isDarkMode = !isDarkMode;
-            document.body.classList.toggle('light-mode', !isDarkMode);
-            document.getElementById('themeIcon').className = isDarkMode ? 'fa-solid fa-moon' : 'fa-solid fa-sun';
-            showNotification(isDarkMode ? 'Dark mode activated' : 'Light mode activated', 'info');
-        }
 
         function changeDate(newDate) {
             selectedDate = newDate;
@@ -544,8 +522,7 @@
             document.getElementById('activeList').innerHTML = `
                 <div class="glass-card p-6 rounded-3xl text-center btn-hover">
                     <div class="text-8xl font-black text-emerald-400 count-up">${active}</div>
-                    <div class="text-xs text-slate-400 uppercase tracking-widest mt-2">CLOCKED IN</div>
-                    <div class="text-xs text-red-400 mt-1">OUT: ${out}</div>
+                    <div class="text-xs text-red-400 mt-1">${out}</div>
                 </div>
             `;
         }
@@ -1099,7 +1076,6 @@
             document.getElementById('datePicker').value = todayStr;
             document.getElementById('currentDateDisplay').textContent = todayStr;
             document.getElementById('threatDateFilter').value = todayStr;
-            document.getElementById('themeIcon').className = 'fa-solid fa-moon';
 
             initCharts();
             loadAllData();
